syntax = "proto3";

package delegatepb;

import "google/protobuf/any.proto";

option go_package = "./delegatepb";

service Delegate {
  rpc GetDelegates(GetDelegatesRequest) returns (GetDelegatesResponse);
}

message GetDelegatesRequest {
  string dao_original_id = 1;
  google.protobuf.Any strategy = 2;
  repeated string addresses = 3;
  string sort = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetDelegatesResponse {
  repeated DelegateEntry delegates = 1;
}

message DelegateEntry {
  string address = 1;
  int32 delegator_count = 2;
  int32 percent_of_delegators = 3; // in basis points
  double votingPower = 4;
  int32 percent_of_voting_power = 5; // in basis points
  string about = 6;
  string statement = 7;
  double user_delegated_voting_power = 8;
}
